--- a/javascript-amazon-project/amazon.html
+++ b/javascript-amazon-project/amazon.html
@@ -58,11 +58,10 @@
 
   </div>
 
-  <script src="data/products.js">
-  </script>
+  <script src="data/cart.js"></script>
+  <script src="data/products.js"></script>
+  <script src="scripts/amazon.js"></script>
 
-  <script src="scripts/amazon.js">
-  </script>
 </body>
 
 </html>
